// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 80.1,
    "goldPerMinute": 34750000,
    "shipsArrived": 801,
    "shipsSent": 831,
    "tradeGold": 347478634n,
  },
  "b": {
    "arrivalsPerMinute": 76.5,
    "goldPerMinute": 34750000,
    "shipsArrived": 765,
    "shipsSent": 837,
    "tradeGold": 347478634n,
  },
  "goldPerTrade": 221900,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 7.2,
    "goldPerMinute": 989900,
    "shipsArrived": 36,
    "shipsSent": 41,
    "tradeGold": 4949516n,
  },
  "b": {
    "arrivalsPerMinute": 6.4,
    "goldPerMinute": 989900,
    "shipsArrived": 32,
    "shipsSent": 38,
    "tradeGold": 4949516n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 17.8,
    "goldPerMinute": 1747000,
    "shipsArrived": 89,
    "shipsSent": 99,
    "tradeGold": 8734440n,
  },
  "b": {
    "arrivalsPerMinute": 6.2,
    "goldPerMinute": 1747000,
    "shipsArrived": 31,
    "shipsSent": 37,
    "tradeGold": 8734440n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 66.9,
    "goldPerMinute": 20250000,
    "shipsArrived": 446,
    "shipsSent": 644,
    "tradeGold": 135005614n,
  },
  "b": {
    "arrivalsPerMinute": 70.65,
    "goldPerMinute": 20250000,
    "shipsArrived": 471,
    "shipsSent": 674,
    "tradeGold": 135005614n,
  },
  "goldPerTrade": 147200,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 4.65,
    "goldPerMinute": 1329000,
    "shipsArrived": 31,
    "shipsSent": 50,
    "tradeGold": 8859738n,
  },
  "b": {
    "arrivalsPerMinute": 4.65,
    "goldPerMinute": 1329000,
    "shipsArrived": 31,
    "shipsSent": 48,
    "tradeGold": 8859738n,
  },
  "goldPerTrade": 142900,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 8.2,
    "goldPerMinute": 77130,
    "shipsArrived": 41,
    "shipsSent": 41,
    "tradeGold": 385674n,
  },
  "b": {
    "arrivalsPerMinute": 7.2,
    "goldPerMinute": 77130,
    "shipsArrived": 36,
    "shipsSent": 38,
    "tradeGold": 385674n,
  },
  "goldPerTrade": 5009,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 54,
    "goldPerMinute": 10060000,
    "shipsArrived": 270,
    "shipsSent": 314,
    "tradeGold": 50311370n,
  },
  "b": {
    "arrivalsPerMinute": 54.2,
    "goldPerMinute": 10060000,
    "shipsArrived": 271,
    "shipsSent": 321,
    "tradeGold": 50311370n,
  },
  "goldPerTrade": 93000,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 49.6,
    "goldPerMinute": 10240000,
    "shipsArrived": 248,
    "shipsSent": 303,
    "tradeGold": 51213254n,
  },
  "b": {
    "arrivalsPerMinute": 48.6,
    "goldPerMinute": 10240000,
    "shipsArrived": 243,
    "shipsSent": 303,
    "tradeGold": 51213254n,
  },
  "goldPerTrade": 104300,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 31.8,
    "goldPerMinute": 10660000,
    "shipsArrived": 318,
    "shipsSent": 444,
    "tradeGold": 106625500n,
  },
  "b": {
    "arrivalsPerMinute": 31.6,
    "goldPerMinute": 10660000,
    "shipsArrived": 316,
    "shipsSent": 446,
    "tradeGold": 106625500n,
  },
  "goldPerTrade": 168200,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 380000n,
  "aGoldPerMinute": 76000,
  "aSelfTradeGold": 380000n,
  "bExternalTradeGold": 250000n,
  "bGoldDelta": 250000n,
  "trainUnitsSeen": 161,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 210000n,
  "aGoldPerMinute": 42000,
  "aSelfTradeGold": 210000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 154,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 230000n,
  "aGoldPerMinute": 46000,
  "aSelfTradeGold": 230000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 161,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 270000n,
  "aGoldPerMinute": 54000,
  "aSelfTradeGold": 270000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 252,
}
`;
